helm/kube-prometheus-stack/httproute.yaml
# Grafana Gateway Configuration
# This creates the HTTPRoute for accessing Grafana monitoring interface

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: metrics.gke.richardr.dev
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "metrics.gke.richardr.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-grafana
      port: 80
